--- a/index.html
+++ b/index.html
@@ -1,18 +1,48 @@
+
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Fetch Address</title>
-    </head>
-    <body>
-        <!-- <h1 id="address">Manhattan, NY</h1> -->
-        <div id="container">
-        <input type="text" id="address" name="address">
-        <button id="button">Fetch Address</button>
+<html>
+
+<head>
+    <title> House Hunters</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--links to CSS files foundation css framework-->
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/foundation.css">
+    <!--custom CSS file-->
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body>
+    <div class="grid-container">
+        <div class="grid-x grid-padding-x ">
+            <div class=" large-12 cell">
+                <!--h1 header-->
+                <h1 class="text-center"> HOUSE HUNTERS </h1>
+            </div>
         </div>
-        <div id="result"></div>
-        <script src="assets/js/script.js"></script>
-    </body>
+        <!--h2 header-->
+        <h2 class="text-center">Looking for your next home? Find Available Listings Here!</h2>
+        <!--form-->
+        <form id="address-form">
+            <div class="grid-x grid-padding-x">
+                <div class=" cell ">
+                    <!--input-->
+                    <input type="text" class="street-address-forum cell input-group-field" id="address-search"
+                        name="address-search" placeholder="Enter Address Street" />
+                    <!--search button-->
+                    <button id="button" class="button large">Search Now</button>
+                </div>
+            </div>
+        </form>
+    </div>
+    <!--links to JS files foundation css framework-->
+    <script src="assets/js/vendor/jquery.js"></script>
+    <script src="assets/js/vendor/what-input.js"></script>
+    <script src="assets/js/vendor/foundation.js"></script>
+    <!--custom JS file-->
+    <script src="assets/js/script.js"></script>
+</body>
+
 </html>
 
