Add function in js file to show search resuts on click

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="grid-container">
+    <div class="grid-container main-section">
         <div class="grid-x grid-padding-x ">
             <div class=" large-12 cell">
                 <!--h1 header-->
@@ -82,7 +82,7 @@
             </div>
         </div>
         <!--search result card block-->
-        <div class="result-card">
+        <div class="result-card" id="hideIt">
             <div class="grid-x grid-margin-x result-card-content">
                 <div class="medium-2 cell">
                     <!--image result block-->
@@ -105,29 +105,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <!--search result card block-->
-    <div class="result-card">
-        <div class="grid-x grid-margin-x result-card-content">
-            <div class="medium-2 cell">
-
-                <!--image result block-->
-                <div class="thumbnail ">
-                    <img class="result-card-image" src="https://placehold.it/200"
-                        alt="image of a current house from the search">
-                </div>
-            </div>
-            <!--h1 & text result card block-->
-            <div class="result-card-title medium-10 cel">
-                <h4>House 3</h6>
-                    <p> It is a long established fact that a reader will be distracted by the readable content of a page
-                        when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                        distribution of letters, as opposed to using 'Content here, content here', making it look like
-                        readable English.</p>
-
-            </div>
-        </div>
-    </div>
     </div>
 
     <!--links to JS files foundation css framework-->
