Add function in js file to show search resuts on click

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <!--h1 & text result card block-->
                 <div class="result-card-title medium-10 cel">
 
-                    <h4>House 1</h6>
+                    <h4>House 1</h4>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page
                             when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
@@ -82,7 +82,7 @@
             </div>
         </div>
         <!--search result card block-->
-        <div class="result-card" id="hideIt">
+        <div class="result-card">
             <div class="grid-x grid-margin-x result-card-content">
                 <div class="medium-2 cell">
                     <!--image result block-->
@@ -93,7 +93,7 @@
                 </div>
                 <!--h1 & text result card block-->
                 <div class="result-card-title medium-10 cel">
-                    <h4>House 2</h6>
+                    <h4>House 2</h4>
                         <p> It is a long established fact that a reader will be distracted by the readable content of a
                             page
                             when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
