Add mobile version css

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
         <!--search result card block-->
         <div class="result-card">
             <div class="grid-x grid-margin-x result-card-content">
-                <div class="medium-2 cell">
+                <div class="medium-2 small-6 cell">
                     <!--image result block-->
                     <div class="thumbnail ">
                         <img class="result-card-image" src="https://placehold.it/200" alt="">
                     </div>
                 </div>
                 <!--h1 & text result card block-->
-                <div class="result-card-title medium-10 cel">
+                <div class="result-card-title medium-10 small-6 cel">
 
                     <h4>House 1</h4>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
@@ -84,7 +84,7 @@
         <!--search result card block-->
         <div class="result-card">
             <div class="grid-x grid-margin-x result-card-content">
-                <div class="medium-2 cell">
+                <div class="medium-2 small-6 cell">
                     <!--image result block-->
                     <div class="thumbnail ">
                         <img class="result-card-image" src="https://placehold.it/200"
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <!--h1 & text result card block-->
-                <div class="result-card-title medium-10 cel">
+                <div class="result-card-title medium-10 small-6 cel">
                     <h4>House 2</h4>
                         <p> It is a long established fact that a reader will be distracted by the readable content of a
                             page
