Add footer. Add additional html page search result card

--- a/house-card.html
+++ b/house-card.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title> House Hunters</title>
     <meta charset="UTF-8" />
@@ -17,80 +18,32 @@
     <!--custom CSS file-->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <div class="grid-container main-section">
-        <div class="grid-x grid-padding-x ">
-            <div class=" large-12 cell">
-                <!--h1 header-->
-                <h1 class="text-center"> HOUSE HUNTERS </h1>
-            </div>
-        </div>
-        <!--h2 header-->
-        <h2 class="text-center">Looking for your next home? Find Available Listings Here!</h2>
-        <!--form-->
-        <form id="address-form">
-            <div class="grid-x grid-padding-x">
-                <div class=" cell ">
-                    <!--input-->
-                    <input type="text" class="street-address-forum cell input-group-field" id="address-search"
-                        name="address-search" placeholder="Enter Address Street" />
-                    <!--search button-->
-
-                    <button id="button" class="button large">Search Now</button>
-                </div>
-            </div>
-        </form>
-    </div>
-    <!--results block-->
-    <div class="result hidden">
-        <div class="search-results">
-            <div class="grid-x grid-padding-x">
-                <!--search result h3 block & icon-->
-                <div class="large-12 cell ">
-
-                    <h3>Search results <i class="fi-magnifying-glass"></i></h3>
+    <div class="main">
+        <div class="grid-container main-section-full-page">
+            <div class="grid-x grid-padding-x ">
+                <div class=" large-12 cell">
+                    <!--h1 header-->
+                    <h1 class="text-center"> HOUSE HUNTERS </h1>
                 </div>
             </div>
         </div>
-        <!--search result card block-->
         <div class="result-card">
+            <div class="navigation">
+                <a href="index.html"><i class="fi-home"> GO BACK</i></a>
+            </div>
             <div class="grid-x grid-margin-x result-card-content">
-                <div class="medium-2 small-6 cell">
+                <div class="medium-6 small-6 large-6 cell">
                     <!--image result block-->
                     <div class="thumbnail ">
-                        <img class="result-card-image" src="https://placehold.it/200" alt="">
-                    </div>
-                </div>
-                <!--h1 & text result card block-->
-                <div class="result-card-title medium-10 small-6 cel">
-                    <a href="house-card.html">
-                        <h4>House 1</h4>
-                    </a>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a
-                        page
-                        when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
-                        normal
-                        distribution of letters, as opposed to using 'Content here, content here', making it look
-                        like
-                        readable English.</p>
-                </div>
-            </div>
-        </div>
-        <!--search result card block-->
-        <div class="result-card">
-            <div class="grid-x grid-margin-x result-card-content">
-                <div class="medium-2 small-6 cell">
-                    <!--image result block-->
-                    <div class="thumbnail ">
-                        <img class="result-card-image" src="https://placehold.it/200"
+                        <img class="result-card-image" src="https://placehold.it/600"
                             alt="image of a current house from the search">
                     </div>
                 </div>
                 <!--h1 & text result card block-->
-                <div class="result-card-title medium-10 small-6 cel">
-                    <a href="house-card.html">
-                        <h4>House 2</h4>
-                    </a>
+                <div class="result-card-title medium-6 small-6 large-6 cel">
+                    <h4>House 2</h4>
                     <p> It is a long established fact that a reader will be distracted by the readable content of a
                         page
                         when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
@@ -98,21 +51,44 @@
                         distribution of letters, as opposed to using 'Content here, content here', making it look
                         like
                         readable English.</p>
+                    <p> It is a long established fact that a reader will be distracted by the readable content of a
+                        page
+                        when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
+                        normal
+                        distribution of letters, as opposed to using 'Content here, content here', making it look
+                        like
+                        readable English.</p>
+                    <p> It is a long established fact that a reader will be distracted by the readable content of a
+                        page
+                        when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
+                        normal
+                        distribution of letters, as opposed to using 'Content here, content here', making it look
+                        like
+                        readable English.</p>
+
+
                 </div>
             </div>
         </div>
-        <!--footer github link-->
-        <footer class="text-center"><a href="https://github.com/neilmkflyingk/house-hunters"><i
-                    class="fi-social-github"> HOUSE HUNTERS</i></a></footer>
+                <!--footer github link-->
+        <footer class="text-center"><a href="https://github.com/neilmkflyingk/house-hunters"><i class="fi-social-github">
+            HOUSE HUNTERS</i></a>
+
+</footer>
+
     </div>
     <!--links to JS files foundation css framework-->
+
     <script src="assets/js/vendor/jquery.js"></script>
     <script src="assets/js/vendor/what-input.js"></script>
     <script src="assets/js/vendor/foundation.js"></script>
     <!--custom JS file-->
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
+
+
 <script src="assets/js/vendor/jquery.js"></script>
 <script src="assets/js/vendor/what-input.js"></script>
 <script src="assets/js/vendor/foundation.js"></script>
