--- a/index.html
+++ b/index.html
@@ -64,15 +64,10 @@
                 <!--h1 & text result card block-->
                 <div class="result-card-title medium-10 small-6 cel">
                     <a href="house-card.html">
-                        <h4>House 1</h4>
+                        <h4>Barnes & Noble, 555, 5th Avenue, Midtown East, Manhattan, New York County, New York, 10017, United States</h4>
                     </a>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a
-                        page
-                        when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
-                        normal
-                        distribution of letters, as opposed to using 'Content here, content here', making it look
-                        like
-                        readable English.</p>
+
+                    <p class="house-description">Charming home located in prime Waverly Park location with top-rated Los Altos schools.  Abundantnatural light throughout the home Move right in w/new interior paint.  Double pane windows throughout.  Expansive formal living room.  </p>
                 </div>
             </div>
         </div>
@@ -89,15 +84,10 @@
                 <!--h1 & text result card block-->
                 <div class="result-card-title medium-10 small-6 cel">
                     <a href="house-card.html">
-                        <h4>House 2</h4>
+                        <h4>Statue of Liberty, Flagpole Plaza, Manhattan Community Board 1, Manhattan, New York County, New York, 10004, United States</h4>
                     </a>
-                    <p> It is a long established fact that a reader will be distracted by the readable content of a
-                        page
-                        when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
-                        normal
-                        distribution of letters, as opposed to using 'Content here, content here', making it look
-                        like
-                        readable English.</p>
+
+                    <p class="house-description">Charming home located in prime Waverly Park location with top-rated Los Altos schools.  Abundantnatural light throughout the home Move right in w/new interior paint.  Double pane windows throughout.  Expansive formal living room.  </p>
                 </div>
             </div>
         </div>
