Add text to html

--- a/house-card.html
+++ b/house-card.html
@@ -43,28 +43,10 @@
                 </div>
                 <!--h1 & text result card block-->
                 <div class="result-card-title medium-6 small-12 large-6 cel">
-                    <h4>House 2</h4>
-                    <p> It is a long established fact that a reader will be distracted by the readable content of a
-                        page
-                        when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
-                        normal
-                        distribution of letters, as opposed to using 'Content here, content here', making it look
-                        like
-                        readable English.</p>
-                    <p> It is a long established fact that a reader will be distracted by the readable content of a
-                        page
-                        when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
-                        normal
-                        distribution of letters, as opposed to using 'Content here, content here', making it look
-                        like
-                        readable English.</p>
-                    <p> It is a long established fact that a reader will be distracted by the readable content of a
-                        page
-                        when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
-                        normal
-                        distribution of letters, as opposed to using 'Content here, content here', making it look
-                        like
-                        readable English.</p>
+                    <h4>Barnes & Noble, 555, 5th Avenue, Midtown East, Manhattan, New York County, New York, 10017, United States</h4>
+                    <p> Charming home located in prime Waverly Park location with top-rated Los Altos schools.  Abundantnatural light throughout the home Move right in w/new interior paint.  Double pane windows throughout.  Expansive formal living room. </p>
+                    <p> Enjoy all that Mountain View, Los Altos, Stanford and Palo Alto have to offer.  Conveniently located almost in North Los Altos just beside multimillion dollar houses in Los Altos.  Near google, Facebook and Apple Take </p>
+                    
 
 
                 </div>
