--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <h4>Statue of Liberty, Flagpole Plaza, Manhattan Community Board 1, Manhattan, New York County, New York, 10004, United States</h4>
                     </a>
 
-                    <p class="house-description">Charming home located in prime Waverly Park location with top-rated Los Altos schools.  Abundantnatural light throughout the home Move right in w/new interior paint.  Double pane windows throughout.  Expansive formal living room.  </p>
+                    <p class="house-description">Enjoy all that Mountain View, Los Altos, Stanford and Palo Alto have to offer.  Conveniently located almost in North Los Altos just beside multimillion dollar houses in Los Altos.  Near Google, Facebook and Apple. </p>
                 </div>
             </div>
         </div>
