append attom api data

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!--custom JS file-->
     <script src="assets/js/script.js"></script>
     <!--custom JS file generate search result-->
-    <script src="assets/js/app.js"></script>
+    <!-- <script src="assets/js/app.js"></script> -->
 </body>
 
 </html>
