--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
         <div class="grid-x grid-padding-x ">
             <div class=" large-12 cell">
                 <!--h1 header-->
-                <h1 class="text-center"> HOUSE HUNTERS </h1>
+                <h1 class="text-center"> NEIGHBORHOOD NAVIGATOR </h1>
             </div>
         </div>
         <!--h2 header-->
-        <h2 class="text-center">Looking for your next home? Find Available Listings Here!</h2>
+        <h2 class="text-center">Thinking of moving into a new Neighborhood?<p> Search here for Properties & the Community around! </p></h2>
         <!--form-->
         <form id="address-form">
             <div class="grid-x grid-padding-x">
                 <div class=" cell ">
                     <!--input-->
                     <input type="text" class="street-address-forum cell input-group-field" id="address-search"
-                        name="address-search" placeholder="Enter Address Street" />
+                        name="address-search" placeholder="Enter Address Street, City and Zip Code" />
                     <!--search button-->
-                    <button id="button" class="button large">Search Now</button>
+                    <button id="button" class="button large">Browse Around Now</button>
                 </div>
             </div>
         </form>
