--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class=" cell ">
                     <!--input-->
                     <input type="text" class="street-address-forum cell input-group-field" id="address-search"
-                        name="address-search" placeholder="Enter Address Street, City and Zip Code" />
+                        name="address-search" placeholder="Enter Street Address, City and Zip Code" />
                     <!--search button-->
                     <button id="button" class="button large">Browse Around Now</button>
                 </div>
