--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <!--form-->
         <form id="address-form">
             <div class="grid-x grid-padding-x">
-                <div class=" cell ">
+                <div class="form-input cell ">
                     <!--input-->
-                    <input type="text" class="street-address-forum cell input-group-field" id="address-search"
+                    <input type="text" class="street-address-form cell input-group-field" id="address-search"
                         name="address-search" placeholder="Enter Street Address, City and Zip Code" />
                     <!--search button-->
                     <button id="button" class="button large">Browse Around Now</button>
